Chapter_5/external_IP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8sapp-public
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: k8sapp
  externalIPs: ["1.2.3.4"]
...
