Chapter_5/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
spec:
  type: LoadBalancer
  ports: 
  - port: 80
    targetPort: 8080
  selector:
    app: kubapp
...
