Chapter_5/svc-affinity.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: k8sapp
spec:
  sessionAffinity: ClientIP
  ports:
  # The port this service will be available on
  - port: 80
  # The container port the service will forward to
    targetPort: 8080
  selector:
    app: k8sapp
...
