Chapter_5/svc-endpoint.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  ports:
  - port: 80
...
