Chapter_5/svc.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: k8sapp
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: k8sapp
...
